# crub-

./: .gitignore  README.md  pyproject.toml  requirements.txt
asmovie/: admin.py  apps.py  models.py  pagination.py  serializers.py  urls.py  views.py
asmovie/migrations/: 0001_initial.py  0002_movie_movie_age_movie_time.py  0003_genre_remove_movie_genre.py  0004_movie_genre.py
config/: settings.py  urls.py
next/: admin.py  models.py  serializers.py  urls.py  views.py
next/migrations/: 0001_initial.py
product/: admin.py  models.py  serializers.py  urls.py  views.py
product/migrations/: 0001_initial.py  0002_alter_product_options_alter_product_color_and_more.py  0003_product_image_alter_product_table.py  0004_product_created_at_product_update.py
templates/: base.html  index.html  product_detail.html
templates/movie/: list.html
